--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
     <meta name="theme-color" content="#121212">
     <meta name="apple-mobile-web-app-title" content="">
     <meta name="application-name" content="">
-    <link rel="preload" as="script" type="text/javascript" href="./index.jsx">
-    <link rel="preload" as="style" type="text/css" href="./index.scss">
+    <!-- <link rel="preload" as="script" type="text/javascript" href="./index.jsx">
+    <link rel="preload" as="style" type="text/css" href="./index.scss"> -->
     <!-- <link rel="manifest" href="/manifest.json"> -->
     <link href="./index.scss" media="screen" rel="stylesheet">
     <!-- <link rel="icon" type="image/png" href="/images/your-icon-name.png">
